GROUNDWORK-487:  Fix up lots of JSON (Jansson) object reference-count issues.  Also fix pointer handling in the decodeTransit() routine. Also have the libtransit Makefile produce a libtransit.so file, as we will later expect to dynamically link to.

--- a/libtransit/Makefile
+++ b/libtransit/Makefile
@@ -2,8 +2,7 @@
 
 libtransit.h	:
 	    # go tool cgo [cgo options] [-- compiler options] libtransit.go
-	    # go tool cgo libtransit.go
-	    export GOPATH=${HOME}; go build -buildmode=c-shared libtransit.go
+	    export GOPATH=${HOME}; go build -buildmode=c-shared -o libtransit.so libtransit.go
 
 clean	:
-	rm -rf _obj libtransit.h libtransit
+	rm -rf _obj libtransit.h libtransit.so
