GROUNDWORK-487-model-changes:  Edits to modify the Transit data model, and to modify other code and test programs to match the data-model changes.  It's possible that I may have missed some ancillary changes that still need to be made.

--- a/transit-c/Makefile
+++ b/transit-c/Makefile
@@ -6,15 +6,22 @@
 # lock down the version that we care about, in the binary that we build.
 LDFLAGS = -Wl,-L`realpath ../local/lib` -Wl,-R`realpath ../local/lib` -ljansson
 
-INCLUDES = -I../local/include
+INCLUDES = -I../local/include -I../libtransit
 
 CFLAGS = ${INCLUDES} -m64 -std=gnu11 ${LDFLAGS}
 
-test_transit	: libtransit.h test_transit.o transit_json.o
+default	: all
+
+all	: test_transit test_libtransit
+
+test_transit	: ../libtransit/libtransit.h test_transit.o transit_json.o
+
+test_libtransit	: ../libtransit/libtransit.h test_libtransit.o
+	cc -o test_libtransit test_libtransit.o -ldl
 
 transit_json.o	: transit_json.c transit_json.h
 
-libtransit.h	:
+../libtransit/libtransit.h	:
 	cd ../libtransit ; make
 
 test	: test_transit
@@ -24,4 +31,4 @@ clean	:
 	rm -f *.o
 
 realclean	: clean
-	rm -f test_transit
+	rm -f test_transit test_libtransit
