--- a/libtransit/Makefile
+++ b/libtransit/Makefile
@@ -1,8 +1,9 @@
 # Makefile for libtransit/ files
 
-libtransit.h	:
+libtransit.h libtransit.so	: ../transit/*.go libtransit.go
 	    # go tool cgo [cgo options] [-- compiler options] libtransit.go
-	    export GOPATH=${HOME}; go build -buildmode=c-shared -o libtransit.so libtransit.go
+	    # export GOPATH=${HOME}; go build -buildmode=c-shared -o libtransit.so libtransit.go
+	    go build -buildmode=c-shared -o libtransit.so libtransit.go
 
 clean	:
 	rm -rf _obj libtransit.h libtransit.so
