Add endpoints for starting and stopping nats server and transport

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,8 @@
 agentConfig:
   port: 8081
   ssl: True
+  startNATS: True
+  startTransport: True
 groundworkConfig:
   host: "localhost:8080"
   account: "RESTAPIACCESS"
