--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,14 @@
 *.so
 *.dylib
 *.iml
+tng
 
 # Test binary, build with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+libtransit/libtransit.h
 
 # Intellij
 .idea
