--- a/gw-transit/config.yml
+++ b/gw-transit/config.yml
@@ -3,7 +3,7 @@ agentConfig:
   ssl: False
   startNATS: True
   startTransport: True
-  startController: False
+  startController: True
 groundworkConfig:
   host: "localhost:80"
   account: "RESTAPIACCESS"
