--- a/gw-transit/pom.xml
+++ b/gw-transit/pom.xml
@@ -40,6 +40,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.0</version>
+    </dependency>
   </dependencies>
 
   <build>
