Add integration test for synchronize inventory and send resource with metric

--- a/gw-transit/config.yml
+++ b/gw-transit/config.yml
@@ -2,7 +2,7 @@ agentConfig:
   addr: ":8081"
   startNATS: True
   startTransport: True
-  startController: True
+  startController: False
 groundworkConfig:
   host: "localhost:80"
   account: "RESTAPIACCESS"
