Add NATS for communicating between Go and Java to list metrics on UI

--- a/gw-transit/config.yml
+++ b/gw-transit/config.yml
@@ -4,7 +4,7 @@ agentConfig:
   natsStoreType: "FILE"
   startNATS: True
   startTransport: True
-  startController: False
+  startController: True
 groundworkConfig:
   host: "localhost:80"
   account: "RESTAPIACCESS"
