--- a/gw-transit/pom.xml
+++ b/gw-transit/pom.xml
@@ -45,6 +45,11 @@
       <artifactId>jaxb-api</artifactId>
       <version>2.0</version>
     </dependency>
+    <dependency>
+      <groupId>io.nats</groupId>
+      <artifactId>java-nats-streaming</artifactId>
+      <version>2.2.3</version>
+    </dependency>
   </dependencies>
 
   <build>
