GROUNDWORK-491-serialization-wip:  various code and doc improvements
This is still work-in-progress, but now there is at least a README
file, a RECOMMENDED_CHANGES file, and a SUGGESTED_TASKS file to
guide building, further adjustments to the Go code, and testing.

--- a/serialization-wip/Makefile
+++ b/serialization-wip/Makefile
@@ -9,7 +9,8 @@ export GOPATH := $(realpath ..):$(realpath .)
 
 JANSSON_VERSION = 2.12
 
-all	: local/lib/libjansson.so libtransit/libtransit.h
+# all	: local/lib/libjansson.so libtransit/libtransit.h
+all	: local/lib/libjansson.so
 
 # Fetch all third-party Go packages needed either directly or indirectly
 # by the TNG software.
