GROUNDWORK-491-serialization-wip:  re-organize source code to prepare for codegen

--- a/serialization-wip/gotocjson/Makefile
+++ b/serialization-wip/gotocjson/Makefile
@@ -10,24 +10,36 @@
 
 JANSSON_LIB_DIRECTORY = ../local/lib
 
+CFLAGS = -std=c11
+CC = cc $(CFLAGS)
+
 default	: all
 
 all	: gotocjson
 
-test	: tjunit
-	tjunit
+test	: unittest
+	unittest
 
 gotocjson	: gotocjson.go
 	go build -o gotocjson gotocjson.go
 
-tjunit	: tj.o tjunit.o
-	cc -o tjunit tj.o tjunit.o -Wl,-L${JANSSON_LIB_DIRECTORY} -ljansson -Wl,-R${JANSSON_LIB_DIRECTORY}
+unittest	: c.o m.o t.o unittest.o convert_go_to_c.o
+	${CC} -o unittest c.o m.o t.o unittest.o convert_go_to_c.o -Wl,-L${JANSSON_LIB_DIRECTORY} -ljansson -Wl,-R${JANSSON_LIB_DIRECTORY}
 
-tjunit.o	: tjunit.c config.h milliseconds.h transit.h
-	cc -c tjunit.c -I../local/include
+unittest.o	: unittest.c convert_go_to_c.h config.h milliseconds.h transit.h
+	${CC} -c unittest.c -I../local/include
 
-tj.o	: tj.c config.h milliseconds.h transit.h
-	cc -c tj.c -I../local/include
+c.o	: c.c convert_go_to_c.h config.h
+	${CC} -c c.c -I../local/include
+
+m.o	: m.c convert_go_to_c.h milliseconds.h
+	${CC} -c m.c -I../local/include
+
+t.o	: t.c convert_go_to_c.h config.h milliseconds.h transit.h
+	${CC} -c t.c -I../local/include
+
+convert_go_to_c.o	: convert_go_to_c.h convert_go_to_c.c
+	${CC} -c convert_go_to_c.c -I../local/include
 
 config.h config.c	: gotocjson config.go
 	gotocjson config.go > ,c
@@ -38,20 +50,20 @@ milliseconds.h milliseconds.c	: gotocjson milliseconds.go
 transit.h transit.c	: gotocjson transit.go
 	gotocjson transit.go > ,t
 
-config.o	: config.c
-	cc -c config.c -I../local/include
+config.o	: config.h config.c
+	${CC} -c config.c -I../local/include
 
-milliseconds.o	: milliseconds.c
-	cc -c milliseconds.c -I../local/include
+milliseconds.o	: milliseconds.h milliseconds.c
+	${CC} -c milliseconds.c -I../local/include
 
-transit.o	: transit.c config.h milliseconds.h transit.h
-	cc -c transit.c -I../local/include
+transit.o	: config.h milliseconds.h transit.h transit.c
+	${CC} -c transit.c -I../local/include
 
 transit	: config.o milliseconds.o transit.o
-	cc -o transit config.o milliseconds.o transit.o -Wl,-L${JANSSON_LIB_DIRECTORY} -ljansson -Wl,-R${JANSSON_LIB_DIRECTORY}
+	${CC} -o transit config.o milliseconds.o transit.o -Wl,-L${JANSSON_LIB_DIRECTORY} -ljansson -Wl,-R${JANSSON_LIB_DIRECTORY}
 
 clean	:
 	rm -f gotocjson *.o config.h config.c milliseconds.h milliseconds.c transit.h transit.c
 
 realclean	: clean
-	rm -f ,c ,e ,g ,m ,t foo.o foo tjunit
+	rm -f ,c ,e ,g ,m ,t foo.o foo unittest
