GROUNDWORK-491-serialization-wip:  saving WIP snapshot as backup
This round adds a bunch of test cases (a few of which are skipped
at the moment, as the routines they call are not completely
implemented).  But almost everything which is enabled is working,
based solely on generated code and no longer on any of the early
manually-written template code, and most tests pass.  An exception
is suppression of a zero time value on JSON output, which is not
yet implemented because it has to be special-cased in the code.
There are some other places as well where omitempty is not yet
supported.

--- a/serialization-wip/gotocjson/Makefile
+++ b/serialization-wip/gotocjson/Makefile
@@ -23,8 +23,11 @@ test	: unittest
 gotocjson	: gotocjson.go
 	go build -o gotocjson gotocjson.go
 
-unittest	: c.o milliseconds.o transit.o unittest.o convert_go_to_c.o
-	${CC} -o unittest c.o milliseconds.o transit.o unittest.o convert_go_to_c.o -Wl,-L${JANSSON_LIB_DIRECTORY} -ljansson -Wl,-R${JANSSON_LIB_DIRECTORY}
+unittest	: config.o milliseconds.o transit.o unittest.o convert_go_to_c.o
+	${CC} -o unittest config.o milliseconds.o transit.o unittest.o convert_go_to_c.o -Wl,-L${JANSSON_LIB_DIRECTORY} -ljansson -Wl,-R${JANSSON_LIB_DIRECTORY}
+
+#unittest	: c.o milliseconds.o transit.o unittest.o convert_go_to_c.o
+#	${CC} -o unittest c.o milliseconds.o transit.o unittest.o convert_go_to_c.o -Wl,-L${JANSSON_LIB_DIRECTORY} -ljansson -Wl,-R${JANSSON_LIB_DIRECTORY}
 
 #unittest	: c.o m.o transit.o unittest.o convert_go_to_c.o
 #	${CC} -o unittest c.o m.o transit.o unittest.o convert_go_to_c.o -Wl,-L${JANSSON_LIB_DIRECTORY} -ljansson -Wl,-R${JANSSON_LIB_DIRECTORY}
