Enhance config for NATS

--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,13 @@
 agentConfig:
   controllerAddr: ":8081"
+  natsAckWait: 15
   natsFilestoreDir: "src/main/resources/datastore"
   natsStoreType: "FILE"
-  startNATS: True
+  natsURL: "nats://localhost:4222"
+  startNats: True
   startTransport: True
   startController: True
-groundworkConfig:
+gwConfig:
   host: "localhost:80"
   account: "RESTAPIACCESS"
   password: "63c5BtYDNAPANvNqAkh9quYszwVrvLaruxmzvM4P1FSw"
