--- a/gotocjson/Makefile
+++ b/gotocjson/Makefile
@@ -11,7 +11,7 @@
 # The enum.go file in this directory is used for ad-hoc testing of the gotocjson tool,
 # during development.
 
-# The copies of config.go, milliseconds.go, and transit.go in this directory are NOT the
+# The copies of setup.go, subseconds.go, and transport.go in this directory are NOT the
 # production copies.  Instead, they are test copies, intended to freeze stable versions of
 # enumerations and data structures that we can reliably use for testing the gotocjson tool
 # ehile developint it.
@@ -33,8 +33,8 @@ JANSSON_LIB_DIRECTORY = ../local/lib
 # JSON test files are expected to be named as "json.{package}.{structure}.{item}",
 # where the {item} is a two-digit number that allows for multiple JSON files to be
 # used to test the same structure.
-JSON_TEST_FILES = json.transit.*
-# JSON_TEST_FILES = json.transit.InventoryResource.01
+JSON_TEST_FILES = json.transport.*
+# JSON_TEST_FILES = json.transport.InventoryResource.01
 
 KERNEL_NAME := $(shell uname -s)
 ifeq ($(KERNEL_NAME),Linux)
@@ -70,7 +70,7 @@ test	: unittest
 # add more test cases over time, here we dynamically construct the C test code.  That way,
 # you don't have have to edit any C code yourself.  All you have to do is provide a new
 # JSON-string test file using an appropriate filename.
-tests	: ${JSON_TEST_FILES} testjson.c convert_go_to_c.o config.o milliseconds.o transit.o Makefile
+tests	: ${JSON_TEST_FILES} testjson.c convert_go_to_c.o setup.o subseconds.o transport.o Makefile
 	for json_file in ${JSON_TEST_FILES}; do			\
 	    echo "================================================================================================";	\
 	    echo Processing json test file $$json_file;		\
@@ -83,7 +83,7 @@ tests	: ${JSON_TEST_FILES} testjson.c convert_go_to_c.o config.o milliseconds.o 
 	    # echo "structure = '$$structure'";			\
 	    # echo "item      = '$$item'";			\
 	    ${CC} -c testjson.c -DPackage=$$package -DStructure=$$structure -I${JANSSON_INCLUDE_DIRECTORY};		\
-	    ${CC} -o testjson convert_go_to_c.o config.o milliseconds.o transit.o testjson.o ${JANSSON_LINK_FLAGS};	\
+	    ${CC} -o testjson convert_go_to_c.o setup.o subseconds.o transport.o testjson.o ${JANSSON_LINK_FLAGS};	\
 	    if ! testjson $$json_file; then			\
 	        echo "ERROR:  Test of $$json_file failed!";	\
 		exit 1;						\
@@ -101,46 +101,46 @@ fullcheck	: unittest
 check	: unittest
 	valgrind ./unittest
 
-unittest	: config.o milliseconds.o transit.o unittest.o convert_go_to_c.o Makefile
-	${CC} -o unittest config.o milliseconds.o transit.o unittest.o convert_go_to_c.o ${JANSSON_LINK_FLAGS}
+unittest	: setup.o subseconds.o transport.o unittest.o convert_go_to_c.o Makefile
+	${CC} -o unittest setup.o subseconds.o transport.o unittest.o convert_go_to_c.o ${JANSSON_LINK_FLAGS}
 
-unittest.o	: unittest.c convert_go_to_c.h config.h milliseconds.h transit.h
+unittest.o	: unittest.c convert_go_to_c.h setup.h subseconds.h transport.h
 	${CC} -c unittest.c -I${JANSSON_INCLUDE_DIRECTORY}
 
 convert_go_to_c.o	: convert_go_to_c.h convert_go_to_c.c
 	${CC} -c convert_go_to_c.c -I${JANSSON_INCLUDE_DIRECTORY}
 
-config.h config.c	: gotocjson config.go
-	./gotocjson -d config.go > ,config-diagnostics
+setup.h setup.c	: gotocjson setup.go
+	./gotocjson -d setup.go > ,setup-diagnostics
 
-milliseconds.h milliseconds.c	: gotocjson milliseconds.go
-	./gotocjson -d milliseconds.go > ,milliseconds-diagnostics
+subseconds.h subseconds.c	: gotocjson subseconds.go
+	./gotocjson -d subseconds.go > ,subseconds-diagnostics
 
-transit.h transit.c	: gotocjson transit.go
-	./gotocjson -d transit.go > ,transit-diagnostics
+transport.h transport.c	: gotocjson transport.go
+	./gotocjson -d transport.go > ,transport-diagnostics
 
-config.o	: config.h config.c convert_go_to_c.h
-	${CC} -c config.c -I${JANSSON_INCLUDE_DIRECTORY}
+setup.o	: setup.h setup.c convert_go_to_c.h
+	${CC} -c setup.c -I${JANSSON_INCLUDE_DIRECTORY}
 
-milliseconds.o	: milliseconds.h milliseconds.c convert_go_to_c.h
-	${CC} -c milliseconds.c -I${JANSSON_INCLUDE_DIRECTORY}
+subseconds.o	: subseconds.h subseconds.c convert_go_to_c.h
+	${CC} -c subseconds.c -I${JANSSON_INCLUDE_DIRECTORY}
 
-transit.o	: config.h milliseconds.h transit.h transit.c convert_go_to_c.h
-	${CC} -c transit.c -I${JANSSON_INCLUDE_DIRECTORY}
+transport.o	: setup.h subseconds.h transport.h transport.c convert_go_to_c.h
+	${CC} -c transport.c -I${JANSSON_INCLUDE_DIRECTORY}
 
-transit_main.o	: transit_main.c
-	${CC} -c transit_main.c -I${JANSSON_INCLUDE_DIRECTORY}
+transport_main.o	: transport_main.c
+	${CC} -c transport_main.c -I${JANSSON_INCLUDE_DIRECTORY}
 
 # A kind of sample application.  Here just to elucidate the linking aspects of such a build,
 # not to produce an actively useful binary program.
-transit	: convert_go_to_c.o config.o milliseconds.o transit.o transit_main.o
-	${CC} -o transit convert_go_to_c.o config.o milliseconds.o transit.o transit_main.o ${JANSSON_LINK_FLAGS}
+transport	: convert_go_to_c.o setup.o subseconds.o transport.o transport_main.o
+	${CC} -o transport convert_go_to_c.o setup.o subseconds.o transport.o transport_main.o ${JANSSON_LINK_FLAGS}
 
 enum.h enum.c	: gotocjson enum.go
 	./gotocjson -d enum.go > ,enum-diagnostics
 
 clean	:
-	rm -f gotocjson *.o config.h config.c milliseconds.h milliseconds.c transit.h transit.c enum.h enum.c
+	rm -f gotocjson *.o setup.h setup.c subseconds.h subseconds.c transport.h transport.c enum.h enum.c
 
 realclean	: clean
-	rm -f ,config-diagnostics ,enum-diagnostics ,milliseconds-diagnostics ,transit-diagnostics unittest transit testjson
+	rm -f ,setup-diagnostics ,enum-diagnostics ,subseconds-diagnostics ,transport-diagnostics unittest transport testjson
