--- a/libtransit/Makefile
+++ b/libtransit/Makefile
@@ -1,6 +1,6 @@
 # Makefile for libtransit/ files
 
-libtransit.h libtransit.so	: ../transit/*.go libtransit.go
+libtransit.h libtransit.so	: libtransit.go ../config/config.go ../transit/*.go ../services/*.go ../log/*.go
 	    # go tool cgo [cgo options] [-- compiler options] libtransit.go
 	    # export GOPATH=${HOME}; go build -buildmode=c-shared -o libtransit.so libtransit.go
 	    go build -buildmode=c-shared -o libtransit.so libtransit.go
