--- a/libtransit/Makefile
+++ b/libtransit/Makefile
@@ -4,6 +4,7 @@ libtransit.h libtransit.so	: libtransit.go ../setup/config.go ../subseconds/mill
 	    # go tool cgo [cgo options] [-- compiler options] libtransit.go
 	    # export GOPATH=${HOME}; go build -buildmode=c-shared -o libtransit.so libtransit.go
 	    go build -buildmode=c-shared -o libtransit.so libtransit.go
+	    chmod +x libtransit.so
 
 clean	:
 	rm -rf _obj libtransit.h libtransit.so
