GROUNDWORK-491-timespec-conversion: finish timespec-conversion changes

--- a/libtransit/Makefile
+++ b/libtransit/Makefile
@@ -1,5 +1,7 @@
 # Makefile for libtransit/ files
 
+all	: libtransit.h libtransit.so
+
 libtransit.h libtransit.so	: libtransit.go ../config/config.go ../milliseconds/milliseconds.go ../transit/*.go ../services/*.go ../log/*.go
 	    # go tool cgo [cgo options] [-- compiler options] libtransit.go
 	    # export GOPATH=${HOME}; go build -buildmode=c-shared -o libtransit.so libtransit.go
