--- a/tng_config.yaml
+++ b/tng_config.yaml
@@ -10,7 +10,7 @@ connector:
   natsHost: ":4222"
   logLevel: 2
 dsConnection:
-  hostName: "localhost:3001"
+  hostName: "localhost:80"
   userName: "RESTAPIACCESS"
   password: "***REMOVED***"
 gwConnections:
@@ -18,7 +18,7 @@ gwConnections:
     hostName: "localhost:80"
     userName: "RESTAPIACCESS"
     password: "***REMOVED***"
-  -
-    hostName: "localhost:88"
-    userName: "RESTAPIACCESS"
-    password: "***REMOVED***"
+#  -
+#    hostName: "localhost:88"
+#    userName: "RESTAPIACCESS"
+#    password: "***REMOVED***"
